# get-final-path-by-name-handle

./: .gitignore  .napi.json  Cargo.toml  LICENSE  README.md  index.node  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: build-prebuilds-windows.yml  publish-to-npm.yml
src/: index.ts  lib.rs
